# seismo

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  MANIFEST.in  OSF_REGISTRATION.md  QUICKSTART.md  README.md  README_PYPI.md  RELEASE_NOTES.md  pyproject.toml  remove_scipy_imports.py  requirements.txt  requirements_no_gui.txt  run_all_tests.sh  run_seismo_simulation.py  run_tests.py  setup.py
Netlify/: documentation.html  index.html
data/enhanced/: seismo_enhanced_20260207_100642.csv  seismo_enhanced_20260207_103230.csv  seismo_enhanced_20260207_104146.csv  seismo_enhanced_20260207_104314.csv
data/exports/: seismo_export_20260207_095940.csv
docs/: Seismo_Research_Paper.docx
reports/alerts/: alert_20260207_095940.txt
reports/daily/: seismo_report_20260207.txt
reports/enhanced/: seismo_analysis_20260207.txt
reports/validation/: deployment_validation_20260207.txt
seismo_framework/: ORGANIZED_STRUCTURE.md  __init__.py  example.py
seismo_framework/config/: __init__.py  default.yaml  operational.yaml  termux.yaml
seismo_framework/core/: __init__.py  monitor.py
seismo_framework/core/integration/: __init__.py  algorithms.py  algorithms.py.backup  weighting.py
seismo_framework/core/monitoring/: __init__.py  real_time.py  visualization.py  visualization.py.backup
seismo_framework/core/parameters/: __init__.py  deformation.py  electrical.py  hydrogeological.py  instability.py  magnetic.py  rock_properties.py  seismic.py  stress.py
seismo_framework/core/utils/: __init__.py  helpers.py
seismo_framework/data/: __init__.py
seismo_framework/data/samples/: sample_earthquakes.csv
seismo_framework/reports/: __init__.py  manager.py
tests/: .gitignore  README.md  __init__.py  enhanced_test.py  final_validation.py  minimal_test.py  organize_project.py  practical_example.py  test_basic_functionality.py  test_complete_model.py  test_no_scipy.py  test_seismo.py
wiki/: Home.md
