[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seismo-framework"
version = "0.1.0"
description = "Real-time earthquake monitoring through multi-parameter geophysical integration"
readme = "README.md"
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Geology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scikit-learn>=1.0.0",
    "obspy>=1.3.0",
    "h5py>=3.6.0",
    "pyyaml>=6.0",
    "requests>=2.27.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
full = [
    "jupyter",
    "notebook",
    "seaborn",
    "plotly",
    "dash",
    "flask",
    "sqlalchemy",
    "psycopg2-binary",
    "redis",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.urls]
Homepage = "https://gitlab.com/gitdeeper3/seismo"
Documentation = "https://seismo.netlify.app/documentation"
Repository = "https://gitlab.com/gitdeeper3/seismo.git"
Issues = "https://gitlab.com/gitdeeper3/seismo/-/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.md"]
