[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seismo-framework"
version = "2.0.2"
authors = [
    { name = "Samir Baladi", email = "gitdeeper@gmail.com" }
]
description = "Seismo Framework: Research-based seismic monitoring system with 45 equations, 4-level alerts, and FastAPI REST server"
readme = "README_PYPI.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = [
    "seismology",
    "earthquake",
    "monitoring",
    "geophysics",
    "fastapi",
    "research",
    "science",
    "bayesian",
    "forecasting"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.urls]
Homepage = "https://seismo.netlify.app"
Documentation = "https://seismo.netlify.app/documentation"
Repository = "https://gitlab.com/gitdeeper3/seismo"
"Bug Tracker" = "https://gitlab.com/gitdeeper3/seismo/-/issues"
